<resources>
    <string name="app_name">Дошка оголошень</string>
    <string name="ad_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="ad_inter_id">	ca-app-pub-3940256099942544/1033173712</string>
    <!-- Menu Drawer -->
    <string name="ad_cat1">Оголошення</string>
    <string name="ad_my_ads">Мої оголошення</string>
    <string name="ad_fav">Обране</string>
    <string name="ad_def">Різне</string>
    <string name="ad_car">Авто</string>
    <string name="ad_pc">Компьютери</string>
    <string name="ad_phone">Смартфони</string>
    <string name="ad_dm">Побутова техніка</string>
    <string name="ac_cat2">Аккаунт</string>
    <string name="remove_ads">Видалити рекламу</string>
    <string name="ac_sing_up">Реєстрація</string>
    <string name="ac_sing_in">Вхід</string>
    <string name="ac_sing_out">Вихід</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="not_reg">Увійдіть або пройдіть реєстрацію</string>

    <!-- Sing Dialog -->
    <string name="registration_hint_password">Введіть пароль</string>
    <string name="registration_hint_mail">Введіть Email</string>
    <string name="dialog_reset_mail_message">Для відновлення пароль вкажіть ваш Email!</string>
    <string name="email_reset_pas_was_sent">Лист для зміни паролю було надіслано!</string>
    <string name="sing_up">Реєстрація</string>
    <string name="sing_in">Вхід</string>
    <string name="sing_in_vs_google">Вхід через GoogleAccount</string>
    <string name="sing_up_action">Зареєструватись</string>
    <string name="sing_up_error">Не вдалось зареєструватись</string>
    <string name="sing_in_error">Не вдалось увійти</string>
    <string name="anonymous_enter">Гість</string>
    <string name="sing_in_action">Увійти</string>
    <string name="forget_password">Забули пароль</string>
    <string name="send_verification_error">Не вдалось надіслати email для підтверждення!</string>
    <string name="send_verification_done">На Ваш email було надіслано посилання для підтверждення аккаунту, будь-ласка підтвердіть ваш аккаунт!</string>
    <!-- Sing Dialog -->
    <string name="link_done">Email підключено до Вашого  Google аккаунту</string>
    <string name="enter_to_g">У Вас вже є аккаунт з даним Email</string>
    <!-- Edit Activity -->
    <string name="select_country">*Обрати країну</string>
    <string name="select_city">*Обрати місто</string>
    <string name="not_select_country">Не обрано країну</string>
    <string name="country">Країна</string>
    <string name="city">Місто</string>
    <string name="index">Індекс</string>
    <string name="tel">Телефон</string>
    <string name="mail">Електронна пошта</string>
    <string name="mail_hint">Введіть Email</string>
    <string name="tel_number">Введіть номер телефону</string>
    <string name="select_category">*Обрати категорію</string>
    <string name="category">Категорія</string>
    <string name="price">Ціна</string>
    <string name="title">Заголовок</string>
    <string name="title_hint">Введіть заголовок</string>
    <string name="price_hint">Введіть ціну</string>
    <string name="description">Опис товару</string>
    <string name="description_hint">Введіть опис товару</string>
    <string name="width_send">З доставкою</string>
    <string name="send">Доставка</string>
    <string name="publish">Опублікувати</string>
    <string name="use_filter">Застосувати</string>
    <string name="clear_filter">Очистити фільтр</string>
    <!-- EAd list Item-->
    <string name="price_desc">Ціна:</string>
    <string name="ad_country">Країна:</string>
    <string name="ad_city">Місто:</string>
    <string name="ad_index">Індекс:</string>
    <string name="ad_tel">Телефон:</string>
    <string name="ad_description">Опис товару:</string>
    <string name="ad_send">Доставка:</string>
    <string name="ad_mail">Ел. пошта:</string>
</resources>